alteração de MainFrame para AddPond, ajuste de botão de viveiros adicionados

--- a/src/styles/AddPonds.css
+++ b/src/styles/AddPonds.css
@@ -1,9 +1,11 @@
-.main-frame {
+.add-ponds {
     padding: 20px;
   }
   
   .viveiros-container {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: 10px;
   }
