--- a/src/styles/RegisterPage.css
+++ b/src/styles/RegisterPage.css
@@ -3,11 +3,39 @@ body {
 }
 
 .register-page {
-    text-align: center;
-    padding: 50px;
-    background-color: #f3f5f0;
-    height: 100%;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* centraliza os itens horizontalmente */
+  padding: 50px;
+  background-color: #f3f5f0;
+  height: 100%;
+}
+
+.register-page form {
+  width: 100%; /* garante que o formulário ocupe 100% da largura do contêiner pai */
+  max-width: 400px; /* define um limite máximo para a largura */
+}
+
+.register-page input,
+.register-page select,
+.register-page button {
+  width: 100%; /* garante que os elementos do formulário ocupem 100% da largura do contêiner pai */
+  margin-bottom: 15px; /* adiciona espaçamento inferior entre os elementos do formulário */
+}
+
+
+.register-page form {
+    width: 100%; /* garante que o formulário ocupe 100% da largura do contêiner pai */
+    max-width: 400px; /* define um limite máximo para a largura */
+}
+
+.register-page input,
+.register-page select,
+.register-page button {
+    width: 100%; /* garante que os elementos do formulário ocupem 100% da largura do contêiner pai */
+    margin-bottom: 15px; /* adiciona espaçamento inferior entre os elementos do formulário */
+}
+
   
   h2 {
     font-size: 2rem;
@@ -69,33 +97,17 @@ body {
   
   select {
     cursor: pointer;
-  }
-  
-  /* Estilizando o campo Perfil */
-  .select-container {
-    position: relative;
-    width: 100%;
-    max-width: 400px;
-  }
-  
-  .select-container::after {
-    content: '\f078'; /* código do ícone de seta para baixo */
-    font-family: 'Font Awesome 5 Free';
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    pointer-events: none; /* garante que o ícone não interfere com a seleção */
-    color: #888;
-  }
-  
-  select {
     appearance: none; /* remove a aparência padrão do dropdown */
     -webkit-appearance: none;
     -moz-appearance: none;
-    width: calc(100% - 20px); /* ajusta a largura para acomodar o ícone */
+    width: 100%; /* use 100% para garantir que o select ocupe toda a largura do contêiner pai */
+    padding: 10px; /* ajuste o padding conforme necessário */
     background-color: transparent; /* torna o dropdown transparente */
-  }
+    border: 1px solid #ccc; /* adicione uma borda para visibilidade */
+    border-radius: 4px; /* arredonde os cantos */
+    box-sizing: border-box; /* inclua padding e borda no cálculo da largura */
+}
+
   
   .placeholder-option {
     display: none; /* oculta a primeira opção padrão */
