--- a/src/styles/PondDetail.css
+++ b/src/styles/PondDetail.css
@@ -1,105 +1,140 @@
+/* Estilos para o contêiner de detalhes */
 .pond-detail {
-    text-align: center;
-    padding: 50px;
-    background-color: #f3f5f0;
-    min-height: 100vh;
-  }
-  
-  .pond-detail h2 {
-    margin-bottom: 20px;
-  }
-  
-  .pond-detail h3 {
-    margin-bottom: 10px;
-  }
-  
+  text-align: center;
+  padding: 20px;
+  background-color: #f3f5f0;
+  min-height: 100vh;
+}
+
+.pond-detail h2 {
+  margin-bottom: 20px;
+}
+
+.pond-detail h3 {
+  margin-bottom: 10px;
+}
+
+/* Grade de botões responsiva */
+.buttons-container {
+  display: grid;
+  gap: 0; /* Remove gap entre os botões */
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Layout de grade responsivo */
+  margin-top: 20px;
+  overflow: hidden; /* Garantir que os cantos dos botões sejam arredondados */
+}
+
+.pond-button {
+  padding: 20px;
+  text-align: center;
+  background-color: #4CAF50; /* Cor de fundo */
+  color: white; /* Cor do texto */
+  border: 1px solid #f8faf8; /* Cor da borda igual à cor de fundo para parecer contínua */
+  cursor: pointer;
+  margin: 0; /* Remove margens dos botões */
+}
+
+.pond-button:hover {
+  background-color: #45a049; /* Cor de fundo ao passar o mouse */
+}
+
+
+
+/* Estilos do popup */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-inner {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: left;
+}
+
+.popup-inner h3 {
+  margin-top: 0;
+}
+
+.popup-inner label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.popup-inner input[type="date"],
+.popup-inner input[type="text"],
+.popup-inner input[type="number"] {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.popup-inner button {
+  margin-right: 10px;
+}
+
+/* Estilos dos botões de teste de estresse */
+.stress-test-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.stress-test-button {
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  background-color: #c0bfbf;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.stress-test-button.active {
+  background-color: #007bff;
+  color: #fff;
+  border-color: #007bff;
+}
+
+.stress-test-button:not(.active):hover {
+  background-color: #e0e0e0;
+}
+
+/* Estilos específicos para telas pequenas */
+@media (max-width: 600px) {
   .buttons-container {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin-top: 20px;
+    grid-template-columns: 1fr 1fr; /* Duas colunas em telas menores */
   }
-  
+
+  .pond-detail {
+    padding: 10px;
+  }
+
   .pond-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
+    padding: 10px;
   }
-  
-  .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+  .stress-test-buttons {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
   }
-  
-  .popup-inner {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: left;
+
+  .stress-test-button {
+    flex: 1;
+    text-align: center;
   }
-  
-  .popup-inner h3 {
-    margin-top: 0;
-  }
-  
-  .popup-inner label {
-    display: block;
-    margin-bottom: 10px;
-  }
-  
+
+  .popup-inner label,
   .popup-inner input[type="date"],
   .popup-inner input[type="text"],
   .popup-inner input[type="number"] {
-    width: 100%;
-    padding: 5px;
     margin-bottom: 10px;
   }
-  
-  .popup-inner button {
-    margin-right: 10px;
-  }
-  
-  .stress-test-buttons {
-    display: flex;
-    gap: 10px;
-  }
-  
-  .stress-test-button {
-    padding: 10px 20px;
-    border: 1px solid #ccc;
-    background-color: #f0f0f0;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 16px;
-  }
-  
-  .stress-test-button.active {
-    background-color: #007bff;
-    color: #fff;
-    border-color: #007bff;
-  }
-  
-  .stress-test-button:not(.active):hover {
-    background-color: #e0e0e0;
-  }
-  
-  @media (max-width: 600px) {
-    .stress-test-buttons {
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: space-between;
-    }
-  
-    .stress-test-button {
-      flex: 1;
-      text-align: center;
-    }
-  }
-  
+}
