adicionei o popup de parâmetros da água e análise presuntiva

--- a/src/styles/PondDetail.css
+++ b/src/styles/PondDetail.css
@@ -38,8 +38,6 @@
   background-color: #45a049; /* Cor de fundo ao passar o mouse */
 }
 
-
-
 /* Estilos do popup */
 .popup {
   position: fixed;
@@ -58,6 +56,8 @@
   padding: 20px;
   border-radius: 10px;
   text-align: left;
+  width: 90%; /* Define a largura do popup para 90% da tela no modo padrão */
+  max-width: 500px; /* Define um limite máximo de largura */
 }
 
 .popup-inner h3 {
@@ -132,6 +132,10 @@
     text-align: center;
   }
 
+  .popup-inner {
+    width: 95%; /* Ajuste a largura do popup para 95% da tela em dispositivos móveis */
+  }
+
   .popup-inner label,
   .popup-inner input[type="date"],
   .popup-inner input[type="text"],
@@ -156,5 +160,4 @@
 .obs input[type="checkbox"] {
   margin-right: 5px; /* Adiciona espaço entre o checkbox e o texto */
   max-width: 20%;
-  
 }
