--- a/src/styles/AddPonds.css
+++ b/src/styles/AddPonds.css
@@ -3,7 +3,7 @@
   }
   
   .viveiros-container {
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -84,4 +84,5 @@
     padding: 10px;
     margin-top: 10px;
   }
+
   
