ajuste de css para que o logo em AddPonds permaneça na parte de baixo

--- a/src/styles/AddPonds.css
+++ b/src/styles/AddPonds.css
@@ -3,7 +3,7 @@
   }
   
   .viveiros-container {
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
