--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -3,10 +3,11 @@ body {
 }
 
 .home-page {
-    text-align: center;
-    padding: 50px;
-    background-color: #f3f5f0;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-between;
+  align-items: center;
   }
   
   .logo {
@@ -28,16 +29,25 @@ body {
     border-radius: 5px;
     font-size: 1.2rem;
     transition: background-color 0.3s ease;
+    margin-top: 20px;
   }
   
   .btn-enter:hover {
     background-color: #0056b3;
   }
+
+  .show-button {
+    min-height: 100px;
+  }
   
-  footer {
-    margin-top: 50px;
-    font-size: 0.8rem;
-    color: #555;
+  
+footer {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  padding: 10px 0;
+  background-color: #f8f9fa;
+  bottom: 0;
   }
   
   img {
@@ -47,3 +57,10 @@ body {
     height: auto;
   }
   
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+  }
