--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -8,6 +8,7 @@ body {
   height: 100vh;
   justify-content: space-between;
   align-items: center;
+  transition: opacity 0.5s ease-in-out;
   }
   
   .logo {
@@ -63,4 +64,12 @@ footer {
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+  }
+
+  .fade-in {
+    opacity: 1;
+  }
+  
+  .fade-out {
+    opacity: 0;
   }
