removi o sublinhado dos links dos viveiros no AddPonds e tbm adicionei a contagem de dias no botão de cada viveiro

--- a/src/styles/AddPonds.css
+++ b/src/styles/AddPonds.css
@@ -85,4 +85,8 @@
     margin-top: 10px;
   }
 
+  .link-style {
+    text-decoration: none; /* Remove a sublinhado do link */
+    color: inherit; /* Herda a cor do pai para manter a cor do texto original */
+  }
   
