--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,12 @@
 .App {
     text-align: center;
   }
+
+  html, body, #root {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
   
   .App-logo {
     height: 40vmin;
