tirei o lançamento de compras de ração do controle de estoque; criei uma página separada para compras de ração; configurei a forma de salvar a compra no localSotrage

--- a/src/styles/AddPonds.css
+++ b/src/styles/AddPonds.css
@@ -165,7 +165,7 @@
     display: flex;
     justify-content: center;
     position: fixed;
-    border-top: 2px solid var(--color-orange-dark);
+    /* border-top: 2px solid var(--color-orange-dark); */
     bottom: 0;
     padding: 1rem 0;
     z-index: 1000;
