--- a/src/styles/Stock.css
+++ b/src/styles/Stock.css
@@ -1,5 +1,4 @@
-/* Stock.css */
-.stock {
+/* .stock {
     padding: 20px;
   }
   
@@ -38,4 +37,219 @@
   .popup-inner form select {
     width: 100%;
   }
+   */
+
+   :root {
+    --color-blue-dark: #1E3A8A;
+    --color-blue-medium: #2563EB;
+    --color-blue-light: #93C5FD;
+    --color-white: #FFFFFF;
+    --color-orange-dark: #EA580C;
+    --color-orange-medium: #FB923C;
+    --color-orange-light: #FED7AA;
+    --color-white2: #f3f5f0;
+  }
   
+  .stock-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .identify-data {
+    height: 100px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-white);
+    background-color: var(--color-blue-dark);
+  }
+  
+  .identify-data h3 {
+    margin-top: 2%;
+  }
+  
+  .identify-data h2 {
+    margin-top: 0%;
+  }
+  
+  .btn-financial-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 120px 30px 140px 30px;
+  }
+  
+  .financial-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f3f5f0; 
+    color: var(--color-blue-medium);
+    border: 1px solid;
+    border-color: var(--color-blue-medium);
+    border-radius: 10px;
+    width: 120px;
+    height: 120px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s;
+    text-align: center;
+    position: relative; /* Necessário para posicionamento absoluto dos spans */
+    overflow: hidden; /* Garante que o conteúdo não transborde */
+  }
+  
+  .financial-icon {
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+  
+  .icon-container {
+    height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    border-top: 2px solid var(--color-blue-dark);
+    bottom: 0;
+    padding: 1rem 0;
+    z-index: 1000;
+    background-color: var(--color-white2);
+  }
+  
+  .icon-container img {
+    width: 100px;
+    height: 100px;
+  }
+  
+  .popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-inner {
+    background: var(--color-white);
+    padding: 20px;
+    border-radius: 10px;
+    width: 300px;
+  }
+  
+  .popup-inner h3 {
+    margin-top: 0;
+  }
+  
+  .popup-inner form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .popup-inner label {
+    margin-bottom: 10px;
+  }
+  
+  .popup-inner input,
+  .popup-inner textarea {
+    margin-top: 5px;
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+  }
+  
+  .button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+  
+  .button-group button {
+    padding: 10px;
+  }
+  
+  .close-button {
+    background: none;
+    border: none;
+    font-size: 16px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
+  
+  .popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5) !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1001;
+  }
+  
+  .popup-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 500px;
+    position: relative;
+  }
+
+  .text-financial-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%; /* Ocupar toda a largura do botão */
+    height: 30%; /* Ocupar 40% da altura do botão */
+    background-color: var(--color-blue-medium); /* Cor de fundo do texto */
+    color: white; /* Cor do texto */
+    text-align: center; /* Centralizar o texto */
+    bottom: 0; /* Alinhar ao fundo */
+    left: 0; /* Alinhar à esquerda */
+    right: 0; /* Alinhar à direita */
+    padding: 5px 0; /* Espaçamento interno */
+    position: absolute;
+  
+  }
+  
+  .text-financial-wrapper span {
+    width: 100%; /* Ocupar toda a largura do botão */
+    bottom: 0; /* Alinhar ao fundo */
+    left: 0; /* Alinhar à esquerda */
+    right: 0; /* Alinhar à direita */
+    padding: 5px 0; /* Espaçamento interno */
+  
+  }
+
+  .saved-message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 12px; /* Tamanho de fonte menor */
+    padding: 5px 10px; /* Reduzindo o padding */
+    border-radius: 5px;
+    z-index: 1002; /* Garantir que fique na frente dos popups */
+    animation: fadeOut 2s forwards;
+}
