--- a/src/styles/PondDetail.css
+++ b/src/styles/PondDetail.css
@@ -52,7 +52,7 @@
 }
 
 /* Estilos do popup */
-.popup {
+/* .popup {
   position: fixed;
   top: 0;
   left: 0;
@@ -62,7 +62,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-y: auto; /* Adiciona rolagem vertical ao pop-up */
+  overflow-y: auto;
   padding: 10px;
 }
 
@@ -71,9 +71,9 @@
   padding: 20px;
   border-radius: 10px;
   text-align: left;
-  max-width: 90%; /* Limita a largura máxima do pop-up */
-  max-height: 90%; /* Limita a altura máxima do pop-up */
-  overflow-y: auto; /* Adiciona rolagem vertical ao conteúdo do pop-up */
+  max-width: 90%;
+  max-height: 90%;
+  overflow-y: auto;
 }
 
 .popup-inner h3 {
@@ -96,7 +96,7 @@
 
 .popup-inner button {
   margin-right: 10px;
-}
+} */
 
 /* Estilos dos botões de teste de estresse */
 .stress-test-buttons {
@@ -148,12 +148,12 @@
     text-align: center;
   }
 
-  .popup-inner label,
+  /* .popup-inner label,
   .popup-inner input[type="date"],
   .popup-inner input[type="text"],
   .popup-inner input[type="number"] {
     margin-bottom: 10px;
-  }
+  } */
 
   .webcam-container {
     width: 100%;
