--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -20,7 +20,7 @@
   justify-content: center;
   align-items: center;
   color: var(--color-white);
-  background-color: var(--color-blue-dark) ;
+  background-color: var(--color-blue-dark);
   border-bottom: 5px solid var(--color-orange-dark);
 }
 
@@ -54,8 +54,10 @@ h2 {
   height: 40%;
   margin-top: 120px;
   display: flex;
-  display: grid; /* Use CSS Grid */
-  grid-template-columns: repeat(2, 1fr); /* Cria duas colunas de igual largura */
+  display: grid;
+  /* Use CSS Grid */
+  grid-template-columns: repeat(2, 1fr);
+  /* Cria duas colunas de igual largura */
   gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
@@ -67,10 +69,10 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f3f5f0; 
-  color: var(--color-blue-medium);
+  background-color: #f3f5f0;
+  color: var(--color-orange-dark);
   border: 1px solid;
-  border-color: var(--color-blue-medium);
+  border-color: var(--color-blue-dark);
   border-radius: 10px;
   width: 120px;
   height: 120px;
@@ -78,27 +80,34 @@ h2 {
   cursor: pointer;
   transition: background-color 0.3s, border-color 0.3s;
   text-align: center;
-  position: relative; /* Necessário para posicionamento absoluto dos spans */
-  overflow: hidden; /* Garante que o conteúdo não transborde */
+  position: relative;
+  /* Necessário para posicionamento absoluto dos spans */
+  overflow: hidden;
+  /* Garante que o conteúdo não transborde */
 }
 
 .dashboard-button:hover {
-  background-color: var(--color-blue-dark); /* Cor de fundo azul mais escura ao passar o mouse */
-  border-color: var(--color-blue-medium); /* Cor da borda ao passar o mouse */
+  background-color: var(--color-blue-dark);
+  /* Cor de fundo azul mais escura ao passar o mouse */
+  border-color: var(--color-blue-medium);
+  /* Cor da borda ao passar o mouse */
 }
 
 .icon-wrapper {
   display: flex;
   align-items: baseline;
   justify-content: center;
-  width: 100%; /* Ocupar toda a largura do botão */
-  height: 70%; /* Ocupar 60% da altura do botão */
+  width: 100%;
+  /* Ocupar toda a largura do botão */
+  height: 70%;
+  /* Ocupar 60% da altura do botão */
   padding-top: 10%;
-  
+
 }
 
 .icon {
-  font-size: 36px; /* Tamanho maior do ícone */
+  font-size: 36px;
+  /* Tamanho maior do ícone */
 }
 
 .text-wrapper {
@@ -106,33 +115,140 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%; /* Ocupar toda a largura do botão */
-  height: 30%; /* Ocupar 40% da altura do botão */
-  background-color: var(--color-blue-medium); /* Cor de fundo do texto */
-  color: white; /* Cor do texto */
-  text-align: center; /* Centralizar o texto */
-  bottom: 0; /* Alinhar ao fundo */
-  left: 0; /* Alinhar à esquerda */
-  right: 0; /* Alinhar à direita */
-  padding: 5px 0; /* Espaçamento interno */
+  width: 100%;
+  /* Ocupar toda a largura do botão */
+  height: 30%;
+  /* Ocupar 40% da altura do botão */
+  background-color: var(--color-blue-dark);
+  /* Cor de fundo do texto */
+  color: white;
+  /* Cor do texto */
+  text-align: center;
+  /* Centralizar o texto */
+  bottom: 0;
+  /* Alinhar ao fundo */
+  left: 0;
+  /* Alinhar à esquerda */
+  right: 0;
+  /* Alinhar à direita */
+  padding: 5px 0;
+  /* Espaçamento interno */
   position: absolute;
 
 }
 
 .text-wrapper span {
-  width: 100%; /* Ocupar toda a largura do botão */
-  bottom: 0; /* Alinhar ao fundo */
-  left: 0; /* Alinhar à esquerda */
-  right: 0; /* Alinhar à direita */
-  padding: 5px 0; /* Espaçamento interno */
-
+  width: 100%;
+  /* Ocupar toda a largura do botão */
+  bottom: 0;
+  /* Alinhar ao fundo */
+  left: 0;
+  /* Alinhar à esquerda */
+  right: 0;
+  /* Alinhar à direita */
+  padding: 5px 0;
+  /* Espaçamento interno */
 }
-
-
 
 .medias {
   height: fit-content;
   color: var(--color-blue-dark);
   position: fixed;
   bottom: 15%;
+}
+
+.icon-container {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  border-top: 2px solid var(--color-blue-dark);
+  bottom: 0;
+  padding: 1rem 0;
+  z-index: 1000;
+  background-color: var(--color-white2);
+
+}
+
+.icon-container-inner {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+
+.side-icon-button {
+  all: unset;
+  color: var(--color-orange-dark);
+  align-self: center;
+  position: absolute;
+}
+
+.side-icon-button:first-child {
+  left: 0;
+}
+
+.side-icon-button:last-child {
+  right: 0;
+}
+
+.icon-container-inner {
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.centered-image {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1001;
+  overflow-y: auto;
+}
+
+.popup-inner {
+  background: var(--color-white);
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 90%;
+  max-height: 90%;
+  overflow-y: auto;
+}
+
+.popup-inner h3 {
+  margin-top: 0;
+}
+
+.popup-inner form {
+  display: flex;
+  flex-direction: column;
+}
+
+.popup-inner label {
+  margin-bottom: 10px;
+}
+
+.popup-inner input,
+.popup-inner textarea {
+  margin-top: 5px;
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
 }
