--- a/src/styles/Financial.css
+++ b/src/styles/Financial.css
@@ -1,95 +1,3 @@
-/* .financial-container {
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 120px;
-  }
-  
-  .header {
-    display: flex;
-    align-items: center;
-  }
-  
-  .back-button {
-    margin-right: 20px;
-    font-size: 20px;
-    cursor: pointer;
-    background: none;
-    border: none;
-  }
-  
-  .btn-financial-container {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .financial-button {
-    display: flex;
-    height: 60px;
-    width: 80%;
-    align-items: center;
-    padding: 10px;
-    font-size: 18px;
-    cursor: pointer;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #007bff;
-    transition: background-color 0.3s ease;
-  }
-  
-  .financial-button:hover {
-    background-color: #e0e0e0;
-  }
-  
-  .financial-icon {
-    margin-right: 10px;
-    height: 30px;
-  }
-  
-  
-  
-  .close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  form label {
-    font-weight: bold;
-  }
-  
-  form input, form textarea, form button {
-    padding: 10px;
-    font-size: 16px;
-  }
-  
-  form button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  form button:hover {
-    background-color: #0056b3;
-  }
-   */
-
    :root {
     --color-blue-dark: #1E3A8A;
     --color-blue-medium: #2563EB;
@@ -133,7 +41,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
     padding: 120px 30px 140px 30px;
   }
   
@@ -142,7 +50,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #f3f5f0; 
-    color: var(--color-blue-medium);
+    color: var(--color-orange-medium);
     border: 1px solid;
     border-color: var(--color-blue-medium);
     border-radius: 10px;
@@ -161,25 +69,7 @@
     margin-bottom: 10px;
   }
   
-  .icon-container {
-    height: 10%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    border-top: 2px solid var(--color-blue-dark);
-    bottom: 0;
-    padding: 1rem 0;
-    z-index: 1000;
-    background-color: var(--color-white2);
-  }
-  
-  .icon-container img {
-    width: 100px;
-    height: 100px;
-  }
-  
-  .popup {
+  /* .popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -217,7 +107,7 @@
     padding: 5px;
     border: 1px solid #ddd;
     border-radius: 5px;
-  }
+  } */
   
   .button-group {
     display: flex;
@@ -237,31 +127,6 @@
     top: 10px;
     right: 10px;
     cursor: pointer;
-  }
-  
-  .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5) !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1001;
-  }
-  
-  .popup-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    width: 80%;
-    max-width: 500px;
-    position: relative;
   }
 
   .text-financial-wrapper {
