--- a/src/styles/Stock.css
+++ b/src/styles/Stock.css
@@ -1,44 +1,3 @@
-/* .stock {
-    padding: 20px;
-  }
-  
-  button {
-    margin: 10px;
-  }
-  
-  .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .popup-inner {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .popup-inner h3 {
-    margin-top: 0;
-  }
-  
-  .popup-inner form label {
-    display: block;
-    margin: 10px 0;
-  }
-  
-  .popup-inner form input,
-  .popup-inner form select {
-    width: 100%;
-  }
-   */
-
    :root {
     --color-blue-dark: #1E3A8A;
     --color-blue-medium: #2563EB;
@@ -109,26 +68,8 @@
     font-size: 30px;
     margin-bottom: 10px;
   }
-  
-  .icon-container {
-    height: 10%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    border-top: 2px solid var(--color-blue-dark);
-    bottom: 0;
-    padding: 1rem 0;
-    z-index: 1000;
-    background-color: var(--color-white2);
-  }
-  
-  .icon-container img {
-    width: 100px;
-    height: 100px;
-  }
-  
-  .popup {
+
+  /* .popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -166,7 +107,7 @@
     padding: 5px;
     border: 1px solid #ddd;
     border-radius: 5px;
-  }
+  } */
   
   .button-group {
     display: flex;
@@ -186,31 +127,6 @@
     top: 10px;
     right: 10px;
     cursor: pointer;
-  }
-  
-  .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5) !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1001;
-  }
-  
-  .popup-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    width: 80%;
-    max-width: 500px;
-    position: relative;
   }
 
   .text-financial-wrapper {
