--- a/src/styles/SanityAnalysis.css
+++ b/src/styles/SanityAnalysis.css
@@ -22,7 +22,7 @@
 
 .popup-inner-sanity {
     background: white;
-    padding: 0px 20px;
+    padding: 20px;
     border-radius: 10px;
     width: 80%;
     max-width: 400px;
@@ -30,8 +30,43 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     position: relative;
+}
+
+.popup-inner-check {
+    background: var(--color-orange-dark);
+    color: var(--color-white);
+    padding: 20px;
+    border-radius: 10px;
+    width: 100px;
+    height: 100px;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+
+.start-form {
+    display: flex;
+    max-width: 100%;
+}
+
+.start-form label {
+    display: flex;
+    width: 80%;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
+.start-form input {
+    margin-left: 10px;
+    max-width: 150px;
+}
+
+.start-form select {
+    max-width: 80px !important;
 }
 
 .sanity-title {
@@ -61,16 +96,6 @@
     height: 270px;
 }
 
-.fade-out-inf {
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    height: 250px;
-    /* Altura do fade-out-inf */
-    background: linear-gradient(to bottom, rgba(184, 32, 32, 0), rgba(255, 255, 255, 1));
-
-}
-
 .main-content-bottom {
     width: 100%;
     height: 200px;
@@ -79,46 +104,29 @@
 }
 
 .form-content {
-
+    display: flex;
+    flex-flow: column;
+    max-width: 100%;
     margin-bottom: 20px;
     padding: 10px;
     background-color: #f0f0f0;
     border-radius: 8px;
-
 }
 
-.form-content:first-child {
-    margin-top: 0;
+.form-content label {
+    max-width: 100%;
 }
 
-.form-content:last-child {
-    margin-bottom: 0;
+.form-content input {
+    max-width: 90%;
 }
-
-/* .form-content:before,
-.form-content:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 100%;
-    pointer-events: none;
-    z-index: -1;
-} */
-
-/* .form-content:before {
-    top: 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-}
-
-.form-content:after {
-    bottom: 0;
-    background: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-} */
 
 .buttons {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
+    justify-items: center;
+    align-items: center;
     width: 100%;
     margin-top: 20px;
 }
@@ -166,37 +174,24 @@
 .analysis-button.selected {
     border: 4px solid black !important;
     font-weight: bold;
-    
-    /* Aumenta a espessura da borda quando selecionado */
 }
 
-.analysis-button:hover {
-    background-color: #00cc00;
-    /* Cor do botão ao passar o mouse */
-}
-
-/* Estilos específicos para cada botão conforme o valor */
 .analysis-button:nth-child(1) {
-    background-color: #006400;
-    /* Verde intenso para o valor 0 */
-}
-
-.analysis-button:nth-child(2) {
     background-color: #32CD32;
     /* Verde claro para o valor 1 */
 }
 
-.analysis-button:nth-child(3) {
+.analysis-button:nth-child(2) {
     background-color: #90EE90   ;
     /* Verde mais claro para o valor 2 */
 }
 
-.analysis-button:nth-child(4) {
+.analysis-button:nth-child(3) {
     background-color: #ff6666;
     /* Vermelho claro para o valor 3 */
 }
 
-.analysis-button:nth-child(5) {
+.analysis-button:nth-child(4) {
     background-color: #ff0000;
     /* Vermelho forte para o valor 4 */
 }
@@ -223,43 +218,75 @@
 
 .analysis-button-lipids.selected {
     border-width: 4px;
-    /* Aumenta a espessura da borda quando selecionado */
 }
 
-.analysis-button-lipids:hover {
-    background-color: #00cc00;
-    /* Cor do botão ao passar o mouse */
-}
-
-/* Estilos específicos para cada botão conforme o valor */
 .analysis-button-lipids:nth-child(1) {
     background-color: #ff0000;
-    /* Verde intenso para o valor 0 */
 }
 
 .analysis-button-lipids:nth-child(2) {
-    background-color: #ff6666;
-    /* Verde claro para o valor 1 */
+    background-color: #ff6666  ;
 }
 
 .analysis-button-lipids:nth-child(3) {
-    background-color: #90EE90    ;
-    /* Verde mais claro para o valor 2 */
+    background-color: #90EE90;
 }
 
 .analysis-button-lipids:nth-child(4) {
-    background-color: #32CD32 ;
-    /* Vermelho claro para o valor 3 */
-}
-
-.analysis-button-lipids:nth-child(5) {
     background-color: #32CD32;
-    /* Vermelho forte para o valor 4 */
 }
 
+.analysis-button-lipids.selected {
+    border: 4px solid black !important;
+    font-weight: bold;
+}
 
-@media (max-width: 768px) {
-    .popup-inner {
-        width: 90%;
-    }
+.button-container-classes {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.analysis-button-classes {
+    height: 36px;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    border: 2px solid transparent;
+    
+    margin: 2px;
+    color: #ffffff;
+    font-size: 16px;
+    cursor: pointer;
+    outline: none;
+    transition: border-color 0.3s ease, border-width 0.3s ease, background-color 0.3s ease;
+}
+
+.analysis-button-classes.selected {
+    /* border: 4px solid black !important; */
+    background-color: var(--color-blue-dark) !important;
+    color: white !important;
+    font-weight: bold;
+}
+
+.analysis-button-classes:nth-child(1) {
+    background-color: var(--color-blue-light);
+    color: var(--color-blue-dark);
+}
+
+.analysis-button-classes:nth-child(2) {
+    background-color: var(--color-blue-light);
+    color: var(--color-blue-dark);
+}
+
+.analysis-button-classes:nth-child(3) {
+    background-color: var(--color-blue-light);
+    color: var(--color-blue-dark);
+}
+
+.analysis-button-classes:nth-child(4) {
+    background-color: var(--color-blue-light);
+    color: var(--color-blue-dark);
 }
