ajuste de telas de análise presuntiva para alternar entre popups; estilo de PondDetail

--- a/src/styles/PondDetail.css
+++ b/src/styles/PondDetail.css
@@ -5,18 +5,22 @@
   align-content: center;
   gap: 0;
   height: 120px;
+  color: var(--color-blue-dark);
 }
 
-.infos h3, .infos p {
+.infos h3,
+.infos p {
   margin: 0;
 }
 
-/* Estilos para o contêiner de detalhes */
 .pond-detail {
   text-align: center;
-  padding: 20px;
   background-color: #f3f5f0;
   min-height: 100vh;
+  margin-top: 120px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
 
 .pond-detail h2 {
@@ -27,78 +31,34 @@
   margin-bottom: 10px;
 }
 
-/* Grade de botões responsiva */
 .buttons-container {
   display: grid;
-  gap: 0; /* Remove gap entre os botões */
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Layout de grade responsivo */
-  margin-top: 20px;
-  overflow: hidden; /* Garantir que os cantos dos botões sejam arredondados */
+  gap: 0;
+  max-width: 100%;
+  padding: 0px 5% 0;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  margin-top: 10px;
+  overflow: hidden;
+  justify-self: center !important;
+  
 }
 
 .pond-button {
   padding: 20px;
   text-align: center;
-  background-color: #4CAF50; /* Cor de fundo */
-  color: white; /* Cor do texto */
-  border: 1px solid #f8faf8; /* Cor da borda igual à cor de fundo para parecer contínua */
+  background-color: var(--color-orange-medium);
+  color: white;
+  border: 1px solid #f8faf8;
   cursor: pointer;
-  margin: 0; /* Remove margens dos botões */
+  margin: 0;
   min-height: 60px;
 }
 
 .pond-button:hover {
-  background-color: #45a049; /* Cor de fundo ao passar o mouse */
+  background-color: var(--color-orange-dark);
+  /* Cor de fundo ao passar o mouse */
 }
 
-/* Estilos do popup */
-/* .popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow-y: auto;
-  padding: 10px;
-}
-
-.popup-inner {
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  text-align: left;
-  max-width: 90%;
-  max-height: 90%;
-  overflow-y: auto;
-}
-
-.popup-inner h3 {
-  margin-top: 0;
-}
-
-.popup-inner label {
-  display: block;
-  margin-bottom: 10px;
-}
-
-.popup-inner input[type="date"],
-.popup-inner input[type="text"],
-.popup-inner input[type="number"] {
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 10px;
-  box-sizing: border-box;
-}
-
-.popup-inner button {
-  margin-right: 10px;
-} */
-
-/* Estilos dos botões de teste de estresse */
 .stress-test-buttons {
   display: flex;
   gap: 10px;
@@ -126,11 +86,8 @@
 /* Estilos específicos para telas pequenas */
 @media (max-width: 600px) {
   .buttons-container {
-    grid-template-columns: 1fr 1fr; /* Duas colunas em telas menores */
-  }
-
-  .pond-detail {
-    padding: 10px;
+    grid-template-columns: 1fr 1fr;
+    /* Duas colunas em telas menores */
   }
 
   .pond-button {
@@ -148,13 +105,6 @@
     text-align: center;
   }
 
-  /* .popup-inner label,
-  .popup-inner input[type="date"],
-  .popup-inner input[type="text"],
-  .popup-inner input[type="number"] {
-    margin-bottom: 10px;
-  } */
-
   .webcam-container {
     width: 100%;
   }
@@ -167,33 +117,48 @@
 }
 
 .obs label {
-  margin-right: 10px; /* Adiciona espaço entre o texto e o checkbox */
+  margin-right: 10px;
+  /* Adiciona espaço entre o texto e o checkbox */
   display: flex;
   flex-direction: row;
   justify-content: left;
 }
 
 .obs input[type="checkbox"] {
-  margin-right: 5px; /* Adiciona espaço entre o checkbox e o texto */
-  appearance: none; /* Remove o estilo padrão do sistema operacional */
-  -webkit-appearance: none; /* Para navegadores baseados em Webkit, como Chrome e Safari */
-  -moz-appearance: none; /* Para navegadores baseados em Gecko, como Firefox */
-  width: 20px; /* Define a largura do checkbox */
-  height: 20px; /* Define a altura do checkbox */
-  border: 2px solid #ccc; /* Adiciona uma borda ao redor do checkbox */
-  border-radius: 4px; /* Define o raio da borda do checkbox */
-  outline: none; /* Remove o contorno ao focar */
-  cursor: pointer; /* Altera o cursor ao passar o mouse */
+  margin-right: 5px;
+  /* Adiciona espaço entre o checkbox e o texto */
+  appearance: none;
+  /* Remove o estilo padrão do sistema operacional */
+  -webkit-appearance: none;
+  /* Para navegadores baseados em Webkit, como Chrome e Safari */
+  -moz-appearance: none;
+  /* Para navegadores baseados em Gecko, como Firefox */
+  width: 20px;
+  /* Define a largura do checkbox */
+  height: 20px;
+  /* Define a altura do checkbox */
+  border: 2px solid #ccc;
+  /* Adiciona uma borda ao redor do checkbox */
+  border-radius: 4px;
+  /* Define o raio da borda do checkbox */
+  outline: none;
+  /* Remove o contorno ao focar */
+  cursor: pointer;
+  /* Altera o cursor ao passar o mouse */
 }
 
 ul {
-  list-style-type: none; /* Remove o marcador da lista */
-  padding: 0; /* Remove o preenchimento padrão */
-  margin: 0; /* Remove a margem padrão */
+  list-style-type: none;
+  /* Remove o marcador da lista */
+  padding: 0;
+  /* Remove o preenchimento padrão */
+  margin: 0;
+  /* Remove a margem padrão */
 }
 
 li {
-  margin-bottom: 10px; /* Adiciona espaçamento entre os itens, se necessário */
+  margin-bottom: 10px;
+  /* Adiciona espaçamento entre os itens, se necessário */
 }
 
 .webcam-container {
@@ -212,7 +177,7 @@ li {
 .results {
   background-color: rgba(8, 8, 184, 0.80);
   color: white;
-  height: 100px; 
+  height: 100px;
   width: 280px;
   margin-top: 10px;
   padding: 10px;
@@ -223,8 +188,10 @@ li {
   width: 50px !important;
   height: 30px;
   background-color: rgba(255, 255, 255, 0.5);
-  border: none; /* Ajuste a cor da borda conforme necessário */
-  color: #fdfcfc; /* Cor do texto */
+  border: none;
+  /* Ajuste a cor da borda conforme necessário */
+  color: #fdfcfc;
+  /* Cor do texto */
   padding: 5px;
   border-radius: 4px;
 }
