--- a/src/styles/AddPonds.css
+++ b/src/styles/AddPonds.css
@@ -152,6 +152,7 @@
   .popup-inner button {
     padding: 10px;
     margin-top: 10px;
+    background-color: var(--color-blue-medium);
   }
 
   .link-style {
