--- a/src/styles/PondDetail.css
+++ b/src/styles/PondDetail.css
@@ -1,223 +1,331 @@
 .infos {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-content: center;
-  gap: 0;
-  color: var(--color-blue-dark);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+    gap: 0;
+    color: var(--color-blue-dark);
 }
 
 .biom {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-content: center;
-  
-  gap: 0;
-  color: var(--color-blue-dark);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+
+    gap: 0;
+    color: var(--color-blue-dark);
 }
 
 .infos h3,
 .infos p {
-  margin: 0;
+    margin: 0;
 }
 
 .pond-detail {
-  text-align: center;
-  background-color: #f3f5f0;
-  min-height: 100vh;
-  margin-top: 120px;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
+    text-align: center;
+    background-color: #f3f5f0;
+    min-height: 100vh;
+    margin-top: 120px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
 }
 
 .pond-detail h2 {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .pond-detail h3 {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .buttons-container {
-  display: grid;
-  gap: 0;
-  max-width: 100%;
-  padding: 0px 5% 0;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-  margin-top: 10px;
-  overflow: hidden;
-  justify-self: center !important;
-  
+    display: grid;
+    gap: 0;
+    max-width: 100%;
+    padding: 0px 5% 0;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    margin-top: 10px;
+    overflow: hidden;
+    justify-self: center !important;
+
 }
 
 .pond-button {
-  padding: 20px;
-  text-align: center;
-  background-color: var(--color-orange-medium);
-  color: white;
-  border: 1px solid #f8faf8;
-  cursor: pointer;
-  margin: 0;
-  min-height: 60px;
+    padding: 20px;
+    text-align: center;
+    background-color: var(--color-orange-medium);
+    color: white;
+    border: 1px solid #f8faf8;
+    cursor: pointer;
+    margin: 0;
+    min-height: 60px;
 }
 
 .pond-button:hover {
-  background-color: var(--color-orange-dark);
-  /* Cor de fundo ao passar o mouse */
+    background-color: var(--color-orange-dark);
+    /* Cor de fundo ao passar o mouse */
 }
 
 .stress-test-buttons {
-  display: flex;
-  gap: 10px;
+    display: flex;
+    gap: 10px;
 }
 
 .stress-test-button {
-  padding: 10px 20px;
-  border: 1px solid #ccc;
-  background-color: #c0bfbf;
-  cursor: pointer;
-  border-radius: 5px;
-  font-size: 16px;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    background-color: #c0bfbf;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
 }
 
 .stress-test-button.active {
-  background-color: #007bff;
-  color: #fff;
-  border-color: #007bff;
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
 }
 
 .stress-test-button:not(.active):hover {
-  background-color: #e0e0e0;
+    background-color: #e0e0e0;
 }
 
 /* Estilos específicos para telas pequenas */
 @media (max-width: 600px) {
-  .buttons-container {
-    grid-template-columns: 1fr 1fr;
-    /* Duas colunas em telas menores */
-  }
+    .buttons-container {
+        grid-template-columns: 1fr 1fr;
+        /* Duas colunas em telas menores */
+    }
 
-  .pond-button {
-    padding: 10px;
-  }
+    .pond-button {
+        padding: 10px;
+    }
 
-  .stress-test-buttons {
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-  }
+    .stress-test-buttons {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
 
-  .stress-test-button {
-    flex: 1;
-    text-align: center;
-  }
+    .stress-test-button {
+        flex: 1;
+        text-align: center;
+    }
 
-  .webcam-container {
-    width: 100%;
-  }
+    .webcam-container {
+        width: 100%;
+    }
 }
 
 .obs {
-  /* display: flex;
-  flex-direction: column;
-  width: 100%; */
-  text-align: center;
-  margin-bottom: 10px;
-  width: 90%;
+    /* display: flex;
+    flex-direction: column;
+    width: 100%; */
+    text-align: center;
+    margin-bottom: 10px;
+    width: 90%;
 }
 
-/* .obs span {
-  margin-right: 10px;
-  
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  
-} */
-
 .obs input[type="checkbox"] {
-  margin-right: 5px;
-  /* Adiciona espaço entre o checkbox e o texto */
-
-  max-width: 20px;
-  /* Define a largura do checkbox */
-  height: 20px;
-  /* Define a altura do checkbox */
-  border: 2px solid #ccc;
-  /* Adiciona uma borda ao redor do checkbox */
-  border-radius: 4px;
-  /* Define o raio da borda do checkbox */
-  outline: none;
-  /* Remove o contorno ao focar */
-  cursor: pointer;
-  /* Altera o cursor ao passar o mouse */
+    margin-right: 5px;
+    max-width: 20px;
+    height: 20px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+    cursor: pointer;
 }
 
 .obs-in {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: flex-start;
-  margin-bottom: 10px;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 10px;
 }
 
 .obs-in label {
-  display: flex;
-  width: 100%;
-  text-align: left;
+    display: flex;
+    width: 100%;
+    text-align: left;
 }
 
 .obs-in span {
-  margin-left: 10px;
+    margin-left: 10px;
 }
 
 ul {
-  list-style-type: none;
-  /* Remove o marcador da lista */
-  padding: 0;
-  /* Remove o preenchimento padrão */
-  margin: 0;
-  /* Remove a margem padrão */
+    list-style-type: none;
+    /* Remove o marcador da lista */
+    padding: 0;
+    /* Remove o preenchimento padrão */
+    margin: 0;
+    /* Remove a margem padrão */
 }
 
 li {
-  margin-bottom: 10px;
-  /* Adiciona espaçamento entre os itens, se necessário */
+    margin-bottom: 10px;
 }
 
 .webcam-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  max-width: 640px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 640px;
 }
 
 .webcam {
-  width: 100%;
-  height: auto;
+    width: 100%;
+    height: auto;
 }
 
 .results {
-  background-color: rgba(8, 8, 184, 0.80);
-  color: white;
-  height: 100px;
-  width: 280px;
-  margin-top: 10px;
-  padding: 10px;
-  border-radius: 5px;
+    background-color: rgba(8, 8, 184, 0.80);
+    color: white;
+    height: 100px;
+    width: 280px;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .results input {
-  width: 50px !important;
-  height: 30px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border: none;
-  /* Ajuste a cor da borda conforme necessário */
-  color: #fdfcfc;
-  /* Cor do texto */
-  padding: 5px;
-  border-radius: 4px;
+    width: 50px !important;
+    height: 30px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    color: #fdfcfc;
+    padding: 5px;
+    border-radius: 4px;
+}
+
+.harv-form {
+    display: flex;
+}
+
+.harv-form label {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.harv-form input,
+select {
+    box-sizing: border-box;
+    align-items: center;
+    max-width: 50% !important;
+    padding: 5px !important;
+    margin: 0px !important;
+}
+
+.first-class-button {
+    background-color: var(--color-orange-medium) !important;
+    color: var(--color-white);
+}
+
+.cancel-button {
+    background-color: var(--color-blue-dark) !important;
+    color: var(--color-white);
+}
+
+/* .form-group {
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    margin-bottom: 5px;
+    font-size: 14px;
+    display: block;
+} */
+
+/* .form-group input {
+    width: calc(100% - 22px);
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+} */
+
+.first-class-button,
+.cancel-button {
+    width: 60%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.popup-inner {
+    position: relative;
+}
+
+.bottom-buttons {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+
+    display: flex;
+    justify-content: space-around;
+}
+
+.result-box {
+    min-height: 100px;
+    margin-top: 20px;
+    margin-bottom: 80px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    text-align: left;
+}
+
+.result-box h3 {
+    margin-top: 0;
+}
+
+.result-box p {
+    margin: 5px 0;
+}
+
+.biometry-for-harvest {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.biometry-inputs {
+    width: 60%;
+}
+
+.biometry-inputs input {
+    box-sizing: border-box !important;
+    margin-right: 50px;
+
+}
+
+.biometry-calc-button {
+    width: 40%;
+    align-content: center;
+    text-align: right;
+}
+
+.biometry-calc-button button {
+    width: 90% !important;
+    margin: 0px !important;
+}
+
+.input-button-container {
+    display: inline-block;
+    vertical-align: top;
+    /* Não está funcionando - ajustar */
 }
